# commons-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  README.md  app_http_mode.py  app_http_mode_chroma.py  app_http_mode_quadrant.py  app_http_mode_weaviate.py  app_lambda.py  app_socket_mode.py  commons-bot.py  commons.yaml  eval.py  fly.toml  index.py  loaders.py  ngrok.yml  pyproject.toml  query_engine.py  requirements.txt  response.json  sam_lambda_template.yaml  slack.py  tool_specs.py  utils.py
data/: commons_urls.xlsx
k8s/argo/: lb-svc.yaml
