[tool.poetry]
name = "OpenShift Commons AI Bot"
version = "0.1.0"
description = ""
authors = ["Adel Zaalouk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.9.19"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.1"
flask = "^3.0.0"
qdrant-client = "^1.7.0"
gunicorn = "^21.2.0"
chromadb = "^0.4.22"
llama-hub = "^0.0.79.post1"
openpyxl = "^3.1.2"
youtube-transcript-api = "^0.6.2"
weaviate-client = "^4.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
