[tool.poetry]
name = "OpenShift Commons AI Bot"
version = "0.1.0"
description = ""
authors = ["Adel Zaalouk"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
llama-index = "^0.10.37"
llama-index-llms-openai = "^0.1.6"
llama-index-readers-youtube-transcript = "^0.1.4"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.1"
flask = "^3.0.0"
qdrant-client = "^1.7.0"
gunicorn = "^21.2.0"
openpyxl = "^3.1.2"
nest-asyncio = "^1.6.0"
graphsignal = "^0.13.50"
feedparser = "^6.0.11"
flagembedding = "^1.2.5"
feedgen = "^1.0.0"
beautifulsoup4 = "^4.12.3"
spacy = "^3.7.4"
memory-profiler = "^0.61.0"
psutil = "^5.9.8"
llama-index-postprocessor-colbert-rerank = "^0.1.1"
deepmultilingualpunctuation = "^1.0.1"
llama-index-vector-stores-qdrant = "^0.1.3"
pytube = "^15.0.0"
llama-index-llms-ollama = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
